# top_few

./: CONTRIBUTING.md  Cargo.toml  LICENSE-MIT  NOTES.md  README.md  benchmark_results.html  justfile  rustfmt.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd.yml
benches/: benches.rs
src/: config.toml  lib.rs  top16.rs
tests/: top16.rs
