[package]
name = "top_few"
version = "0.1.0"
authors = ["Nicholas Sterling <Nicholas.Sterling@gmail.com>"]
edition = "2024"
rust-version = "1.88.0"
description = "Gets the top few elements"
repository = "https://github.com/NicholasSterling/top_few"
license = "MIT OR Apache-2.0"
publish = false  # no accidents while in dev
# keywords = [""]
# categories = [""]
# homepage = ""
# documentation = ""

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[features]
default = []
full = []

[dependencies]

[dev-dependencies]
criterion = "0.7.0"
pretty_assertions = "1"
proptest = "1"
topset = "0.4.0"

[package.metadata.cargo-udeps.ignore]
development = ["criterion", "pretty_assertions", "proptest"]

[package.metadata.playground]
features = ["full"]

[profile.release]
codegen-units = 1
incremental = false

[profile.bench]
codegen-units = 1
incremental = false

[[bench]]
name = "benches"
harness = false
required-features = ["full"]
